Implement passing Strings to Swift, with copying
add benchmarks for String -> Swift and returning a count